--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 /* global */
-@import url('_normalize.css');
-@import url('_fonts.css');
-@import url('_vars.css');
-@import url('_settings.css');
+@import url('normalize.css');
+@import url('fonts.css');
+@import url('vars.css');
+@import url('settings.css');
 
 /* blocks */
-@import url('blocks/_nav.css');
-@import url('blocks/_user.css');
-@import url('blocks/_content.css');
-@import url('blocks/_search.css');
-@import url('blocks/_table.css');
-@import url('blocks/_btn.css');
-@import url('blocks/_pagination.css');
+@import url('blocks/nav.css');
+@import url('blocks/user.css');
+@import url('blocks/content.css');
+@import url('blocks/search.css');
+@import url('blocks/table.css');
+@import url('blocks/btn.css');
+@import url('blocks/pagination.css');
